fixing overflow issue

--- a/wp-content/themes/rlt/styles/sass/components/_promo.scss
+++ b/wp-content/themes/rlt/styles/sass/components/_promo.scss
@@ -101,7 +101,7 @@
 
         > header{
             padding: 1em 3em;
-            margin-top: 1em;
+            margin-top: 2em;
             display: inline-block;
             max-width: 350px;
             position: relative;
