--- a/wp-content/themes/rlt/styles/sass/settings/_base.scss
+++ b/wp-content/themes/rlt/styles/sass/settings/_base.scss
@@ -1,8 +1,9 @@
 body{
   background-color: $cool_grey;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 main{
   clear: both;
-  overflow-x: hidden;
 }
